--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "homepage": "https://madgvox.github.io/bao-ui-sandbox",
+  "homepage": "https://madgvox.github.io/bao-plugin-test",
   "scripts": {
     "build": "rsbuild build",
+    "deploy-pages": "gh-pages -d dist",
     "dev": "rsbuild dev",
     "format": "prettier --write .",
     "preview": "rsbuild preview",
@@ -29,6 +30,7 @@
     "@types/esbuild-plugin-import-map": "^0.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "gh-pages": "^6.3.0",
     "prettier": "^3.7.3",
     "storybook": "10.1.11",
     "storybook-react-rsbuild": "^3.2.1",
